# CPP_Task2

./: CMakeLists.txt  main.cpp
classes/: Direction.h  Field.cpp  Field.h  Snake.cpp  Snake.h  Utils.cpp
classes/artifact/: Artifact.cpp  Artifact.h  Bomb.cpp  Bomb.h  Invisible.cpp  Invisible.h  RandomArtifactFactory.h  Slower.cpp  Slower.h
classes/game/: Field.cpp  Field.h  Game.cpp  Game.h  Snake.cpp  Snake.h
classes/geometry/: Point.h  Utils.cpp
classes/player/: Player.cpp  SimpleSurvivorBot.cpp  SimpleSurvivorBot.h
classes/util/: Utils.h  symbols.h
include/artifact/: Artifact.h  Invisible.h
include/game/: Field.h  Game.h  Snake.h
include/geometry/: Point.h
include/player/: Player.h  SimpleSurvivorBot.h
src/: main.cpp
src/artifact/: Bomb.cpp  Invisible.cpp  Slower.cpp
src/game/: Field.cpp  Game.cpp  Snake.cpp
src/geometry/: Point.cpp
src/player/: SimpleSurvivorBot.cpp
tests/: tests.cpp
